--- a/data_kafka_connect/docker-compose.yml
+++ b/data_kafka_connect/docker-compose.yml
@@ -24,6 +24,6 @@ services:
       CONNECT_REST_ADVERTISED_HOST_NAME: localhost
       CONNECT_REST_ADVERTISED_PORT: 28083
     volumes:
-      - ./data-kafka-connect/files/aws/credentials:/root/.aws/
+      - ./files/aws/credentials:/root/.aws/
     ports:
       - 28083:28083
