--- a/data_kafka_connect/docker-compose.yml
+++ b/data_kafka_connect/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       CONNECT_REST_ADVERTISED_HOST_NAME: localhost
       CONNECT_REST_ADVERTISED_PORT: 28083
     volumes:
-      - ./files/aws/credentials:/root/.aws/
+      - type: bind
+        source: ./files/aws/credentials
+        target: /root/.aws/credentials
     ports:
       - 28083:28083
