--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,11 @@
-FROM confluentinc/cp-kafka-connect:5.3.2
+FROM confluentinc/cp-kafka-connect:5.5.7
 
-RUN mkdir -p /etc/kafka-connect/certs \
-  mkdir -p /etc/kafka-connect-s3/connectors/properties
+WORKDIR /etc/kafka-connect/certs
+WORKDIR /etc/kafka-connect-s3/connectors/properties
 
 COPY ./files/certs/kafka.client.truststore.jks /etc/kafka-connect/certs
 COPY ./scripts/entrypoint.sh /entrypoint.sh
+
+WORKDIR /
 
 ENTRYPOINT ["/entrypoint.sh"]
